# holographySimulation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ReadMe  plan.md
graphics/: CMakeLists.txt
graphics/.cache/clangd/index/: graphics.cpp.AA34FA628985C2F1.idx
graphics/src/: VBO.cpp  graphics.cpp  input_processing.cpp  input_processing.h  main.cpp  settings.cpp  settings.h  shaders.h  textures.h
include/: VBO.h  geometry.h  graphics.h  hologram_prep.h  input_processing.h  rendering.h  settings.h  visible_field.h
src/: VBO.cpp  calculate_geometry.cpp  calculate_transp_matrix.cpp  calculate_visible_field.cpp  graphics.cpp  hologram  hologram_simulation.cpp  input_processing.cpp  main.cpp  make_geom.cpp  make_transp_matrix.cpp  rendering.cpp  settings.cpp  shaders.cpp  textures.cpp  vis.py
tests/: test_geom.cpp  test_hologram_prep.cpp  test_transp_calc.cpp  test_transp_read.cpp  test_visible_field.cpp
text/: .~lock.Modelirovanie-gologrammy-Denisyuka.pptx#  main.aux  main.blg  main.out  main.tex
text/images/: .~lock.present.pptx#
